--- a/VSCSS.css
+++ b/VSCSS.css
@@ -50,13 +50,13 @@ p {
 h6 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 300px;
-    font-weight: 900px;
+    font-weight: 900;
 }
 
 h5 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 140px;
-    font-weight: 900px;
+    font-weight: 900;
 }
 
 label {
