--- a/VSCSS.css
+++ b/VSCSS.css
@@ -8,12 +8,12 @@ body {
 
 h1 {
     color: black;
-    font-size: 5vw;
+    font-size: 70px;
     z-index: 1;
 }
 
 h3 {
-    font-size: 1.5vw;
+    font-size: 16px;
     font-weight: 100;
     color: dimgrey;
     z-index: 1;
@@ -26,7 +26,7 @@ p, nav, label, b, a {
 }
 
 b {
-    font-size: 1.25rem;
+    font-size: 20px;
     font-weight: 550;
     color: black;
 }
@@ -42,8 +42,8 @@ a:hover {
 
 /* Button Styles */
 button, .btn {
-    font-size: 1.2rem;
-    padding: 12px 20px;
+    font-size: 18px;
+    padding: 14px 20px;
     border-radius: 4px;
     border: 1px solid;
     cursor: pointer;
@@ -71,9 +71,11 @@ button, .btn {
     z-index: 1000;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 15px 5vw;
+    justify-content: space-around;
+    padding: 15px 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    flex-direction: row;
+    text-align: center;
 }
 
 #icons {
@@ -98,26 +100,14 @@ video {
 
 /* Responsive Design */
 @media screen and (max-width: 1024px) {
-    h1 {
-        font-size: 6vw;
-    }
-    h3 {
-        font-size: 2vw;
-    }
     #navi {
         flex-direction: row;
-        text-align: center;
-        padding: 10px 2vw;
+        justify-content: space-between;
+        padding: 15px 20px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    h1 {
-        font-size: 7vw;
-    }
-    h3 {
-        font-size: 2.5vw;
-    }
     .container {
         flex-direction: column;
         align-items: center;
@@ -128,13 +118,9 @@ video {
 }
 
 @media screen and (max-width: 480px) {
-    h1 {
-        font-size: 8vw;
-    }
-    h3 {
-        font-size: 3vw;
-    }
     #navi {
-        padding: 8px 3vw;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px 15px;
     }
 }
