--- a/VSCSS.css
+++ b/VSCSS.css
@@ -71,11 +71,29 @@ button, .btn {
     z-index: 1000;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 15px 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     flex-direction: row;
     text-align: center;
+}
+
+#navi ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+#navi ul li {
+    margin: 0 15px;
+}
+
+#navi ul li a {
+    text-decoration: none;
+    color: #484848;
+    font-size: 17px;
+    font-weight: 100;
 }
 
 #icons {
@@ -108,6 +126,11 @@ video {
 }
 
 @media screen and (max-width: 768px) {
+    #navi ul {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
     .container {
         flex-direction: column;
         align-items: center;
@@ -122,5 +145,8 @@ video {
         flex-direction: row;
         justify-content: space-between;
         padding: 10px 15px;
+    }
+    #navi ul {
+        flex-wrap: wrap;
     }
 }
